<resources>
    <string name="app_name">Pesquisa Preço</string>
    <string name="entrar">Entrar</string>
    <string name="poweredby">Powered by</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="agenda">Agenda</string>
    <string name="escolha_concorrente">Escolha o concorrente</string>
    <string name="cancelar">Cancelar</string>
    <string name="feito">Feito</string>
    <string name="selecione_praca">Selecione a praça</string>
    <string name="selecione_nome">Selecione Nome</string>
    <string name="selecione_endereco">Selecione Endereco</string>
    <string name="ean">EAN:</string>
    <string name="desc">Descrição:</string>
    <string name="marca">Marca:</string>
    <string name="unid_medida">Unidade de Medida:</string>
    <string name="eanv">EAN</string>
    <string name="descv">Descrição</string>
    <string name="marcav">Marca</string>
    <string name="unid_medidav">Un.Med.</string>

    <string name="cifrao">R$</string>
    <string name="preco">Preço</string>
    <string name="busque_produto">Busque o produto pelo código</string>
    <string name="campos_obrigatorio">Campos obrigatórios em branco</string>
    <string name="opcoes">Opções:</string>
    <string name="oferta">Oferta</string>
    <string name="ruptura">Ruptura</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="titulo">Titulo</string>
    <string name="sair">Sair</string>
    <string name="deseja_sair">Deseja realmente sair ?</string>
    <string name="carregando">Carregando...</string>
    <string name="resumo">Resumo</string>
    <string name="tempo">Tempo</string>
    <string name="itens">Itens</string>
    <string name="quantidade">Quantidade</string>
    <string name="naoencontrados">Não Encontrados</string>
    <string name="rupturas">Ruptura</string>
    <string name="confirma_pesquisa">Confirma dados da pesquisa ?</string>
    <string name="praca">Praça</string>
    <string name="concorrente">Concorrente</string>
    <string name="dataPesquisa">Data Pesquisa</string>
    <string name="msg">Permita Todos</string>
    <string name="ok">Ok</string>
    <string name="eans">Eans</string>
    <string name="descricao">Descrição</string>
    <string name="op">Opções</string>
    <string name="fifo">Fifo</string>
    <string name="secao">Seção</string>
    <string name="sub_secao">SubSeção</string>
    <string name="tipo">Tipo</string>
    <string name="sub_tipo">SubTipo</string>
    <string name="produto">Produto</string>
    <string name="produto_n_encontrado">Produto não encontrado</string>
    <string name="normal">Normal</string>
    <string name="conecte_se">Conecte-se a um rede de internet</string>
    <string name="sucesso">Enviado com sucesso</string>
    <string name="falha_enviar">Falha ao Enviar</string>
    <string name="enviando">Enviando...</string>
    <string name="versao">1.0.0</string>
    <string name="deseja_enviar">Deseja Enviar Itens ?</string>
</resources>
