<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relatorio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resumo"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Large"/>

    <TextView
        android:text="@string/tempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Small"/>

    <TextView
        android:id="@+id/tempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Large"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itens"
        android:textAppearance="@style/TextAppearance.Small"/>

    <TextView
        android:id="@+id/qtdeitens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Large"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantidade"
        android:textAppearance="@style/TextAppearance.Small"/>

    <TextView
        android:id="@+id/qtdeofertas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Large"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/naoencontrados"
        android:textAppearance="@style/TextAppearance.Small"/>

    <TextView
        android:id="@+id/naoencontrados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Large"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rupturas"
        android:textAppearance="@style/TextAppearance.Small"/>

    <TextView
        android:id="@+id/rupturas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Large"/>

    <Button
        android:id="@+id/btDone"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:textAppearance="@style/TextAppearance.Large"
        android:text="@string/ok"
        android:textColor="?attr/colorControlActivated" />

</LinearLayout>