<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/op"
            android:textAppearance="@style/TextAppearance.Small" />

        <RadioGroup
            android:id="@+id/groupOpcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/oferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oferta"
                android:textAppearance="@style/TextAppearance.Small" />

            <RadioButton
                android:id="@+id/ruptura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruptura"
                android:textAppearance="@style/TextAppearance.Small" />


            <RadioButton
                android:id="@+id/fifo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/fifo"
                android:textAppearance="@style/TextAppearance.Small" />

            <RadioButton
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:textAppearance="@style/TextAppearance.Small" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/btCancelar"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/cancelar"
                android:textAppearance="@style/TextAppearance.Small"
                android:textColor="?attr/colorControlActivated" />

            <Button
                android:id="@+id/btFeito"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/feito"
                android:textAppearance="@style/TextAppearance.Small"
                android:textColor="?attr/colorControlActivated" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>