<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp"
    android:paddingRight="24dp"
    android:paddingTop="24dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_concorrente"
        android:layout_marginBottom="20dp"
        android:textAppearance="@style/TextAppearance.Large" />

    <TextView
        android:id="@+id/tvPraca"
        android:layout_width="match_parent"
        android:background="@drawable/border_spinner"
        android:hint="@string/selecione_praca"
        android:gravity="start|center"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.Small"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="match_parent"
        android:background="@drawable/border_spinner"
        android:hint="@string/selecione_nome"
        android:gravity="start|center"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.Small"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvEndereco"
        android:layout_width="match_parent"
        android:background="@drawable/border_spinner"
        android:hint="@string/selecione_endereco"
        android:gravity="start|center"
        android:textAppearance="@style/TextAppearance.Small"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btCancelar"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Small"
            android:text="@string/cancelar"
            android:textColor="?attr/colorControlActivated" />

        <Button
            android:id="@+id/btFeito"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/feito"
            android:textAppearance="@style/TextAppearance.Small"
            android:textColor="?attr/colorControlActivated" />

    </LinearLayout>


</LinearLayout>