<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/confirma_pesquisa"
        android:textAppearance="@style/TextAppearance.Large"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/concorrente"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.Small"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvConcorrente"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.Large"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/dataPesquisa"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.Small"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.Large"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/usuario"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.Small"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.Large"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/cancelar"
            android:textAppearance="@style/TextAppearance.Small"
            android:textColor="?attr/colorControlActivated" />

        <Button
            android:id="@+id/btDone"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textAppearance="@style/TextAppearance.Small"
            android:text="@string/feito"
            android:textColor="?attr/colorControlActivated" />

    </LinearLayout>
</LinearLayout>
</ScrollView>