<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ean"
                android:textAppearance="@style/TextAppearance.Small" />

            <TextView
                android:id="@+id/tvEan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 654316464"
                android:textAppearance="@style/TextAppearance.Large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/desc"
                android:textAppearance="@style/TextAppearance.Small" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Coca - Cola"
                android:textAppearance="@style/TextAppearance.Large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/marca"
                android:textAppearance="@style/TextAppearance.Small" />

            <TextView
                android:id="@+id/tvMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Coca - Cola"
                android:textAppearance="@style/TextAppearance.Large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/unid_medida"
                android:textAppearance="@style/TextAppearance.Small" />

            <TextView
                android:id="@+id/tvUnidMedida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" LT"
                android:textAppearance="@style/TextAppearance.Large" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_editext_preco"
            android:digits=",0123456789"
            android:gravity="start"
            android:hint="@string/cifrao"
            android:textAppearance="@style/TextAppearance.Small"
            android:inputType="numberDecimal" />

    </LinearLayout>


</LinearLayout>